--- a/index.html
+++ b/index.html
@@ -1,47 +1,138 @@
 <html>
 <head>
 <title>Mana Software Modules</title>
-<link href="https://cdn.datatables.net/1.10.24/css/dataTables.foundation.min.css" rel="stylesheet"/>
+<!-- Compressed CSS -->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/foundation-sites@6.6.3/dist/css/foundation.min.css" integrity="sha256-ogmFxjqiTMnZhxCqVmcqTvjfe1Y/ec4WaRj/aQPvn+I=" crossorigin="anonymous">
 
+<link href="./fontawesome/css/all.min.css" rel="stylesheet"  type='text/css' />
+<link href="https://cdn.datatables.net/1.10.24/css/dataTables.foundation.min.css" rel="stylesheet"/>
+<style>
+.tooltip {
+  position: relative;
+  display: inline-block;
+}
+
+.tooltip .tooltiptext {
+  visibility: hidden;
+  width: 140px;
+  background-color: #555;
+  color: #fff;
+  text-align: center;
+  border-radius: 6px;
+  padding: 5px;
+  position: absolute;
+  z-index: 1;
+  bottom: 150%;
+  left: 50%;
+  margin-left: -75px;
+  opacity: 0;
+  transition: opacity 0.3s;
+}
+
+.tooltip .tooltiptext::after {
+  content: "";
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  margin-left: -5px;
+  border-width: 5px;
+  border-style: solid;
+  border-color: #555 transparent transparent transparent;
+}
+
+.tooltip:hover .tooltiptext {
+  visibility: visible;
+  opacity: 1;
+}
+</style>
 </head>
 <body>
-<h1>Hello World</h1>
+<div class="grid-x grid-padding-x">
+<div class = "cell">
+<h1>Module list for Mana</h1>
 <table id="example" class="display" style="width:100%">
         <thead>
             <tr>
+                <th>Load cmd</th>
                 <th>Parent</th>
-                <th>Name</th>
                 <th>Version</th>
-                <th>Hidden</th>
                 <th>Description</th>
-                <th>Website</th>
             </tr>
         </thead>
         <tfoot>
             <tr>
 
+                <th>Load cmd</th>
                 <th>Parent</th>
-                <th>Name</th>
                 <th>Version</th>
-                <th>Hidden</th>
                 <th>Description</th>
-                <th>Website</th>
             </tr>
         </tfoot>
     </table>
 
+<div class="reveal" id="edit_modal" data-reveal>
+  <h2 id="modalTitle">Module load Command</h2>
+  <button class="close-button" data-close aria-label="Close reveal" type="button">
+    <span aria-hidden="true">&times;</span>
+  </button>
+    <p id="modal_data"></p>
+</div>
+</div>
 
-
-
-
+</div>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="https://cdn.datatables.net/1.10.24/js/jquery.dataTables.min.js"></script>
+<!-- Compressed JavaScript -->
+<script src="https://cdn.jsdelivr.net/npm/foundation-sites@6.6.3/dist/js/foundation.min.js" integrity="sha256-pRF3zifJRA9jXGv++b06qwtSqX1byFQOLjqa2PTEb2o=" crossorigin="anonymous"></script>
 <script src="https://cdn.datatables.net/1.10.24/js/dataTables.foundation.min.js"></script>
+<script defer src="fontawesome/js/all.js"></script>
 <script>
 $(document).ready(function() {
-    $('#example').DataTable( {
-        "ajax": './data.json'
-    } );
+    var popup = new Foundation.Reveal($('#edit_modal'));
+    var oTable = $('#example').DataTable( {
+            "pageLength": 25,
+            "columns": [
+            { "width": "10%" ,'searchable': false, 'orderable': false},
+            { "width": "20%" , 'searchable': true, },
+            { "width": "20%" , 'searchable': true, },
+            { "width": "50%" , 'searchable': false, 'orderable': false}
+        ],
+
+        "ajax": {"url": './data.json',
+                    "dataSrc": function (json) {
+                var return_data = new Array();
+                for (var i = 0, ien = json.data.length; i < ien; i++) {
+                    var jd = json.data[i];
+                    if(jd[4]){
+                      json.data[i][1] = "<a target='_blank' href='"+ jd[4] +"' >"+ jd[1] +"</a>";
+                    }
+                    json.data[i].pop();
+                   json.data[i][0] = "<span class='cp'><i class='fas fa-copy'></i></span><input type='hidden' class='name' value='"+jd[0]+"'>";
+                  }                                  
+                return json.data;
+              }
+        } });
+        
+
+    $('#example' + ' tbody').on('click', 'span.cp', function () {     
+        var tr = $(this).closest('tr');
+        var row = oTable.row(tr);
+        var nm = $($(oTable.cell({ 'row': row.index(), 'column': 0 }).node()).find("input.name")[0]).val(); 
+        result = "<input class='cp_text' type = 'text' value='module load " +  nm +"'><button class='cp_btn button' >Copy</button>";
+        $("#modal_data").html(result);
+        popup.open();
+ 
+    });    
+    $('#modal_data').on('click', 'button.cp_btn', function () {     
+    var txt= $("#modal_data > input.cp_text")[0];
+      txt.select();
+      txt.setSelectionRange(0, txt.value.length);
+      document.execCommand("copy");
+      $(this).html("Copied");
+      popup.close();
+    });
+
+
 } );
 </script>
 </body>
