change header on parent column

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <thead>
             <tr>
                 <th>Load cmd</th>
-                <th>Parent</th>
+                <th>Software</th>
                 <th>Version</th>
                 <th>Description</th>
             </tr>
@@ -63,7 +63,7 @@
             <tr>
 
                 <th>Load cmd</th>
-                <th>Parent</th>
+                <th>Software</th>
                 <th>Version</th>
                 <th>Description</th>
             </tr>
