flipped sort order

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ $(document).ready(function() {
               $('html,body').animate({scrollTop: targetOffset}, 500);
               oldStart = o._iDisplayStart;}},    
             "pageLength": 25,
-            "order": [[1, "desc"]],
+            "order": [[1, "asc"]],
             "columns": [
             { "width": "10%" ,'searchable': false, 'orderable': false},
             { "width": "20%" , 'searchable': true, },
