--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 <div class="grid-x grid-padding-x">
 <div class = "cell">
 <h1>Module list for Mana</h1>
-<table id="example" class="display" style="width:100%">
+<table id="modules" class="display" style="width:100%">
         <thead>
             <tr>
                 <th>Load cmd</th>
@@ -91,11 +91,11 @@
 $(document).ready(function() {
     var oldStart = 0;
     var popup = new Foundation.Reveal($('#edit_modal'));
-    var oTable = $('#example').DataTable( {
+    var oTable = $('#modules').DataTable( {
             "sPaginationType": "full_numbers",
             "fnDrawCallback": function (o) {
             if ( o._iDisplayStart != oldStart ) {
-              var targetOffset = $('#example').offset().top;
+              var targetOffset = $('#modules').offset().top;
               $('html,body').animate({scrollTop: targetOffset}, 500);
               oldStart = o._iDisplayStart;}},    
             "pageLength": 25,
@@ -103,7 +103,7 @@ $(document).ready(function() {
             "columns": [
             { "width": "10%" ,'searchable': false, 'orderable': false},
             { "width": "20%" , 'searchable': true, },
-            { "width": "20%" , 'searchable': true, },
+            { "width": "20%" , 'searchable': false, },
             { "width": "50%" , 'searchable': false, 'orderable': false}
         ],
 
@@ -123,7 +123,7 @@ $(document).ready(function() {
         } });
         
 
-    $('#example' + ' tbody').on('click', 'span.cp', function () {     
+    $('#modules' + ' tbody').on('click', 'span.cp', function () {     
         var tr = $(this).closest('tr');
         var row = oTable.row(tr);
         var nm = $($(oTable.cell({ 'row': row.index(), 'column': 0 }).node()).find("input.name")[0]).val(); 
